check.log
    Checking neuro_symbolic_emulator v0.1.0 (/home/cyrex/Projects/neuro_symbolic_emulator)
error[E0275]: overflow evaluating the requirement `&ArrayBase<_, _>: Not`
  --> src/fu.rs:84:48
   |
84 |         let delta_1: Array1<f32> = self.w2.t().dot(delta_2) * &d_hidden;
   |                                                ^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`neuro_symbolic_emulator`)
   = note: required for `&ArrayBase<_, _>` to implement `Not`
   = note: 127 redundant requirements hidden
   = note: required for `&ArrayBase<ViewRepr<&f32>, Dim<[usize; 2]>>` to implement `Not`

For more information about this error, try `rustc --explain E0275`.
error: could not compile `neuro_symbolic_emulator` (lib) due to 1 previous error
